--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,9 +38,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-run '~/.tmux/plugins/tpm/tpm'
-
+set -g @plugin 'theutz/tmux-tokyonight-nvim'
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
@@ -48,7 +49,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-bind-key -r i run-shell "tmux neww tmux-cht.sh
-bind r source-file ~/.config/tmux.conf
+# bind-key -r i run-shell "tmux neww tmux-cht.sh
+bind r source-file ~/.config/tmux/tmux.conf
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+run '~/.config/tmux/plugins/tpm/tpm'
