--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,5 @@
+set-option -g default-terminal 'screen-254color'
+set-option -g terminal-overrides ',xterm-256color:RGB' 
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
@@ -16,7 +18,37 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
+set -g history-limit 1000000 # increase history size (from 2,000)
+set -g set-clipboard on      # use system clipboard
+set -g status-interval 3     # update the status bar every 3 seconds
+set -g status-left "#[fg=blue,bold,bg=#1e1e2e]  #S   "
+set -g status-right "#[fg=#b4befe,bold,bg=#1e1e2e]%a %Y-%m-%d 󱑒 %l:%M %p"
+# set -ga status-right "#($HOME/.config/tmux/scripts/cal.sh)"
+set -g status-justify left
+set -g status-left-length 200    # increase length (from 10)
+set -g status-right-length 200    # increase length (from 10)
+set -g status-position top       # macOS / darwin style
+set -g status-style 'bg=#1e1e2e' # transparent
+set -g window-status-current-format '#[fg=magenta,bg=#1e1e2e] *#I #W'
+set -g window-status-format '#[fg=gray,bg=#1e1e2e] #I #W'
+set -g window-status-last-style 'fg=white,bg=black'
+set -g default-terminal "${TERM}"
+set -g message-command-style bg=default,fg=yellow
+set -g message-style bg=default,fg=yellow
+set -g mode-style bg=default,fg=yellow
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @fzf-url-history-limit '2000'
+set -g @t-bind 'K'
+set -g @t-fzf-find-binding 'ctrl-l:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
+set -g @t-fzf-prompt '  '
+set -g @tmux-last-color on
+set -g @tmux-last-pager 'less -r'
+set -g @tmux-last-pager 'less'
+set -g @tmux-last-prompt-pattern ' '
+set -g @tmux-nerd-font-window-name-shell-icon ''
+set -g @tmux-nerd-font-window-name-show-name false
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -31,17 +63,18 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'theutz/tmux-tokyonight-nvim'
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'mskelton/tmux-last' # <prefix>t
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
