meta windows tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,16 +2,16 @@ set-option -g default-terminal 'screen-254color'
 set-option -g terminal-overrides ',xterm-256color:RGB' 
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
-
+set-option -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -49,21 +49,11 @@ set -g @tmux-last-pager 'less'
 set -g @tmux-last-prompt-pattern ' '
 set -g @tmux-nerd-font-window-name-shell-icon ''
 set -g @tmux-nerd-font-window-name-show-name false
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+# Meta for switching windows
+bind-key -n m-h previous-window
+bind-key -n m-l next-window
 
-# Shift Alt vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
-
-# set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -82,7 +72,7 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 # bind-key -r i run-shell "tmux neww tmux-cht.sh
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf; display "Reloaded!"
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 run '~/.config/tmux/plugins/tpm/tpm'
