--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,26 +1,51 @@
-set-option -g default-terminal 'screen-254color'
-set-option -g terminal-overrides ',xterm-256color:RGB' 
-set-option -sa terminal-overrides ",xterm*:Tc"
-set -g mouse on
-set-option -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set-option -g focus-events on # TODO: learn how this works
+
+# colors
+set -g default-terminal "tmux-256color"
+set -g terminal-overrides ",xterm-256color:RGB"
+
+# options
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
-
-# Vim style pane selection
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-
-# Start windows and panes at 1, not 0
-set -g base-index 1
+set-option -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+set -g detach-on-destroy off # don't exit from tmux when closing a session
+set -g escape-time 0         # zero-out escape time delay
 set -g history-limit 1000000 # increase history size (from 2,000)
+set -g mouse on              # enable mouse support
+set -g renumber-windows on   # renumber all windows when any window is closed
 set -g set-clipboard on      # use system clipboard
 set -g status-interval 3     # update the status bar every 3 seconds
+
+
+set -g window-status-current-format '*#[fg=magenta]#W'
+set -g window-status-format ' #[fg=gray]#W'
+
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
+set -g default-terminal "${TERM}"
+set -g message-command-style bg=default,fg=yellow
+set -g message-style bg=default,fg=yellow
+set -g mode-style bg=default,fg=yellow
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+
+bind '%' split-window -c '#{pane_current_path}' -h
+bind '"' split-window -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
+bind g new-window -n '🌳' lazygit
+bind G new-window -n '😺' ghd
+bind B new-window -n '👷' b
+bind D new-window -n '👷' d
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+# Tmux bar
 set -g status-left "#[fg=blue,bold,bg=#1e1e2e]  #S   "
 set -g status-right "#[fg=#b4befe,bold,bg=#1e1e2e]%a %Y-%m-%d 󱑒 %l:%M %p"
 # set -ga status-right "#($HOME/.config/tmux/scripts/cal.sh)"
@@ -32,12 +57,23 @@ set -g status-style 'bg=#1e1e2e' # transparent
 set -g window-status-current-format '#[fg=magenta,bg=#1e1e2e] *#I #W'
 set -g window-status-format '#[fg=gray,bg=#1e1e2e] #I #W'
 set -g window-status-last-style 'fg=white,bg=black'
-set -g default-terminal "${TERM}"
 set -g message-command-style bg=default,fg=yellow
 set -g message-style bg=default,fg=yellow
 set -g mode-style bg=default,fg=yellow
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+
+# Clipboard
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+# Plugins options
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 set -g @t-bind 'K'
@@ -63,13 +99,8 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'mskelton/tmux-last' # <prefix>t
-# set vi-mode
 set-window-option -g mode-keys vi
-# keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 # bind-key -r i run-shell "tmux neww tmux-cht.sh
 bind r source-file ~/.config/tmux/tmux.conf; display "Reloaded!"
