--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -99,6 +99,7 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin '27medkamal/tmux-session-wizard'
 set-window-option -g mode-keys vi
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
