--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,10 +37,6 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
-bind g new-window -n '🌳' lazygit
-bind G new-window -n '😺' ghd
-bind B new-window -n '👷' b
-bind D new-window -n '👷' d
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -73,20 +69,13 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-# Plugins options
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
-set -g @t-bind 'K'
-set -g @t-fzf-find-binding 'ctrl-l:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
-set -g @t-fzf-prompt '  '
-set -g @tmux-last-color on
-set -g @tmux-last-pager 'less -r'
-set -g @tmux-last-pager 'less'
-set -g @tmux-last-prompt-pattern ' '
-set -g @tmux-nerd-font-window-name-shell-icon ''
-set -g @tmux-nerd-font-window-name-show-name false
 
-# Meta for switching windows
+# Plugins options
+# set -g @t-bind 'K'
+# set -g @t-fzf-find-binding 'ctrl-l:change-prompt(  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
+# set -g @t-fzf-prompt '  '
+set -g @session-wizard 'f'
+set -g @tmux-fzf 'm'
 bind-key -n m-h previous-window
 bind-key -n m-l next-window
 
@@ -95,14 +84,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin '27medkamal/tmux-session-wizard'
-set-window-option -g mode-keys vi
 
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+set-window-option -g mode-keys vi
+TMUX_FZF_LAUNCH_KEY="m"
 # bind-key -r i run-shell "tmux neww tmux-cht.sh
 bind r source-file ~/.config/tmux/tmux.conf; display "Reloaded!"
 bind '"' split-window -v -c "#{pane_current_path}"
